conversion of service classes from dto to non-dto, fixing services and controllers tests.