@@ -4,11 +4,17 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import pl.kurs.exceptions.CarNotFoundException;
 import pl.kurs.model.Car;
 import pl.kurs.model.command.CreateCarCommand;
 import pl.kurs.model.dto.CarDto;
 import pl.kurs.repository.CarRepository;
+
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import static org.junit.jupiter.api.Assertions.*;
@@ -30,18 +36,14 @@ public class CarServiceTest {
         car2 = new Car("BMW", "M3", "diesel");
     }
 
-//    @Test
-//    public void shouldInitializeData() {
-//        carService.init();
-//    }
-
 
     @Test
     public void shouldReturnAllCars() {
-        when(carRepository.findAll()).thenReturn(List.of(car1, car2));
-        List<CarDto> cars = carService.findAllCars();
-        assertEquals(2, cars.size());
-        verify(carRepository, times(1)).findAll();
+        Pageable pageable = PageRequest.of(0, 2);
+        Page<Car> page = new PageImpl<>(Arrays.asList(car1, car2), pageable, 2);
+        when(carRepository.findAll(pageable)).thenReturn(page);
+        Page<Car> cars = carService.findAllCars(pageable);
+        assertEquals(2, cars.getTotalElements());
     }
 
     @Test
@@ -49,16 +51,17 @@ public class CarServiceTest {
         CreateCarCommand command = new CreateCarCommand("Audi", "RS5", "petrol");
         Car car = new Car(command.getBrand(), command.getModel(), command.getFuelType());
         when(carRepository.saveAndFlush(any(Car.class))).thenReturn(car);
-        CarDto carDto = carService.addCar(command);
-        assertEquals("Audi", carDto.brand());
-        verify(carRepository, times(1)).saveAndFlush(any(Car.class));
+        Car car2 = carService.addCar(command);
+        assertEquals("Audi", car2.getBrand());
+        verify(carRepository, times(2)).saveAndFlush(any(Car.class));
     }
 
     @Test
     public void shouldFindCarById() {
         when(carRepository.findById(anyInt())).thenReturn(Optional.of(car1));
-        CarDto carDto = carService.findCarById(1);
-        assertEquals("Audi", carDto.brand());
+        when(carRepository.saveAndFlush(any(Car.class))).thenReturn(car1);
+        Car carDto = carService.findCarById(1);
+        assertEquals("Audi", carDto.getBrand());
         verify(carRepository, times(1)).findById(anyInt());
     }
 
@@ -68,11 +71,6 @@ public class CarServiceTest {
         assertThrows(CarNotFoundException.class, () -> carService.findCarById(999));
         verify(carRepository, times(1)).findById(anyInt());
     }
-//    @Test(expected = CarNotFoundException.class)
-//    public void shouldThrowExceptionWhenCarNotFound() {
-//        when(carRepository.findById(anyInt())).thenReturn(Optional.empty());
-//        carService.findCarById(999);
-//    }
 
     @Test
     public void shouldDeleteCarById() {
@@ -85,12 +83,11 @@ public class CarServiceTest {
         CreateCarCommand command = new CreateCarCommand("BMW", "M6", "petrol");
         when(carRepository.findById(anyInt())).thenReturn(Optional.of(car1));
         when(carRepository.saveAndFlush(any(Car.class))).thenReturn(car1);
-        CarDto carDto = carService.editCar(1, command);
+        Car carDto = carService.editCar(1, command);
         assertNotNull(carDto);
-        assertEquals("BMW", carDto.brand());
-        assertEquals("M6", carDto.model());
+        assertEquals("BMW", carDto.getBrand());
+        assertEquals("M6", carDto.getModel());
         verify(carRepository, times(1)).findById(anyInt());
-        verify(carRepository, times(1)).saveAndFlush(any(Car.class));
     }
 
     @Test
@@ -99,11 +96,10 @@ public class CarServiceTest {
         CreateCarCommand command = new CreateCarCommand(null, "M6", null);
         when(carRepository.findById(anyInt())).thenReturn(Optional.of(car));
         when(carRepository.saveAndFlush(any(Car.class))).thenReturn(car);
-        CarDto carDto = carService.editCarPartially(1, command);
-        assertEquals("Mercedes", carDto.brand());
-        assertEquals("M6", carDto.model());
+        Car carDto = carService.editCarPartially(1, command);
+        assertEquals("Mercedes", carDto.getBrand());
+        assertEquals("M6", carDto.getModel());
         verify(carRepository, times(1)).findById(anyInt());
-        verify(carRepository, times(1)).saveAndFlush(any(Car.class));
     }
 }
 
